ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: fredrick-nginx
spec:
  controller: nginx.ingress.kubernetes.io/controller
