ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: fredrick-test-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: fredrick-nginx  # Ensure this matches the IngressClass
  rules:
  - host: aa223a79ea91745ef8cc830734073843-2141631920.us-east-1.elb.amazonaws.com  # Your Load Balancer's hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
